--- a/LandmarkQuest/Packages/manifest.json
+++ b/LandmarkQuest/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.20",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.ml-agents": "2.0.1",
     "com.unity.scripting.python": "6.0.1",
     "com.unity.test-framework": "1.1.31",
